--- a/projects/sandbox/data_generation/pyproject.toml
+++ b/projects/sandbox/data_generation/pyproject.toml
@@ -12,20 +12,22 @@ conda = {append_base_ld_library_path = true}
 [tool.poetry.dependencies]
 python = ">=3.8,<3.11"
 "ml4gw" = {path = "../../../ml4gw/", develop = true}
-mldatafind = {git = "https://github.com/ML4GW/mldatafind.git"}
 "mlpe.base" = {path = "../../../libs/base", extras = ["numpy"], develop = true}
 "mlpe.logging" = {path = "../../../libs/logging", develop = true}
 "mlpe.injection" = {path = "../../../libs/injection", develop = true}
+
+mldatafind = {git = "https://github.com/ML4GW/mldatafind.git"}
 typeo = {git = "https://github.com/ML4GW/typeo.git"}
+
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2.0"
 
 [tool.poetry.scripts]
 generate-background = "data_generation.background:main"
-generate-flow-injections = "data_generation.flow_injections:main"
-generate-bilby-injections = "data_generation.bilby_injections:main"
 generate-waveforms = "data_generation.waveforms:main"
+generate-flow-injections = "data_generation.flow_injections:main"
+generate-bilby-injections = "data_generation.bilby.injections:main"
 
 [build-system]
 requires = ["poetry-core"]
