--- a/projects/sandbox/pyproject.toml
+++ b/projects/sandbox/pyproject.toml
@@ -119,6 +119,7 @@ adam = {lr = 1e-4, weight_decay = 1e-5}
 # optimizer subcommand
 [tool.typeo.scripts.train.scheduler]
 onecycle = {max_lr = 1e-3, epochs = "${base.max_epochs}", lr_ramp_epochs = 80, steps_per_epoch = "${base.batches_per_epoch}" }
+cosine = {T_max = 10000, eta_min = 1e-5}
 
 
 [tool.typeo.scripts.generate-flow-injections]
