--- a/projects/sandbox/pyproject.toml
+++ b/projects/sandbox/pyproject.toml
@@ -49,7 +49,7 @@ maf = {num_transforms = 15, num_blocks = 2, use_batch_norm = true}
 # embedding subcommands
 dense = {context_dim = 64, hidden_layer_size = 128, num_hidden_layers = 2}
 coherent = {context_dim = 64, hidden_layer_size = 128, num_hidden_layers = 2}
-resnet = {context_dim = 64, layers = [2, 2, 2], norm_groups = 8}
+resnet = {context_dim = 128, layers = [2, 2], norm_groups = 8}
 
 [tool.typeo.scripts.generate-background]
 datadir = "${base.datadir}"
@@ -102,7 +102,7 @@ device = "cuda"
 
 valid_frac = 0.25
 valid_stride = 0.0625
-init_weights = "${base.basedir}/training/weights.pt"
+#init_weights = "${base.basedir}/training/weights.pt"
 # flow subcommand
 [tool.typeo.scripts.train.flow]
 coupling = "${base.coupling}"
