--- a/projects/sandbox/pyproject.toml
+++ b/projects/sandbox/pyproject.toml
@@ -2,14 +2,14 @@
 # note: until pinto update gets in, any steps
 # that have subcommands will fail (e.g. training and sampling)
 steps = [
-    "data_generation:generate-background",
-    "data_generation:generate-waveforms",
-    "data_generation:generate-flow-injections",
-    "data_generation:generate-bilby-injections",
-    "analyze_with_bilby:analyze-with-bilby",
-    "train:train:maf:resnet",
+    #"data_generation:generate-background",
+    #"data_generation:generate-waveforms",
+    #"data_generation:generate-flow-injections",
+    #"data_generation:generate-bilby-injections",
+    #"analyze_with_bilby:analyze-with-bilby",
+    #"train:train:maf:resnet",
     "sampling:sample-with-flow:maf:resnet",
-    "sampling:sample-and-compare-with-bilby:maf:resnet"
+    #"sampling:sample-and-compare-with-bilby:maf:resnet"
 ]
 
 [tool.typeo.base]
@@ -40,7 +40,7 @@ bilby_duration = 4
 # training parameters
 batches_per_epoch = 300
 max_epochs = 250
-init_weights = "/work/submit/deep1018/pe-base-dir/training/weights.pt"
+#init_weights = "/work/submit/deep1018/pe-base-dir/training/weights.pt"
 
 # flow subcommands
 coupling = {num_transforms = 20, num_transform_blocks = 4, use_batch_norm = true}
@@ -93,12 +93,7 @@ highpass = 32
 batch_size = 1024
 batches_per_epoch = "${base.batches_per_epoch}"
 max_epochs = "${base.max_epochs}"
-<<<<<<< HEAD
 early_stop = 30
-=======
-
-early_stop = 500
->>>>>>> 35b69d1 (updates)
 
 use_amp = false
 profile = false
@@ -106,7 +101,7 @@ device = "cuda"
 
 valid_frac = 0.25
 valid_stride = 0.0625
-init_weights = "${base.basedir}/training/weights.pt"
+#init_weights = "${base.basedir}/training/weights.pt"
 # flow subcommand
 [tool.typeo.scripts.train.flow]
 coupling = "${base.coupling}"
@@ -120,19 +115,15 @@ resnet = "${base.resnet}"
 
 # scheduler subcommand
 [tool.typeo.scripts.train.optimizer]
-adam = {lr = 1e-3, weight_decay = 1e-5}
+adam = {lr = 1e-4, weight_decay = 1e-5}
 
 # optimizer subcommand
 [tool.typeo.scripts.train.scheduler]
-<<<<<<< HEAD
 onecycle = {max_lr = 1e-3, epochs = "${base.max_epochs}", lr_ramp_epochs = 80, steps_per_epoch = "${base.batches_per_epoch}" }
 cosine = {T_max = 10000, eta_min = 1e-5}
 sequential = {schedulers = ['ConstantLR', 'CosineAnnealingLR', 'StepLR'], scheduler_kwargs = ["dict(total_iters=4800)", "dict(T_max=2000,eta_min=1e-5)", "dict(gamma=0.1,step_size=2400)"], milestones = [4800, 20000]}
-=======
-onecycle = {max_lr = 5e-5, epochs = "${base.max_epochs}", lr_ramp_epochs = 1, steps_per_epoch = "${base.batches_per_epoch}" }
-cosine = {T_max = 15000, eta_min = 1e-7}
->>>>>>> 35b69d1 (updates)
 plateau = {factor = 0.9, patience = 30, cooldown = 10, min_lr = 1e-8}
+step = {step_size = 4500, gamma = 0.6}
 
 [tool.typeo.scripts.generate-flow-injections]
 ifos = "${base.ifos}"
@@ -143,7 +134,7 @@ start = "${base.stop}"
 stop = "${base.test_stop}" 
 sample_rate = "${base.sample_rate}"
 prior = "${base.prior}"
-n_samples = 5000
+n_samples = 1000
 kernel_length = "${base.kernel_length}"
 waveform_duration = "${base.waveform_duration}"
 datadir = "${base.datadir}"
