change freq domain naming

--- a/projects/sandbox/pyproject.toml
+++ b/projects/sandbox/pyproject.toml
@@ -166,7 +166,7 @@ n_live = 256
 n_act = 5
 ifos = "${base.ifos}"
 bilby_duration = "${base.bilby_duration}"
-waveform = "mlpe.injection.sine_gaussian_frequency"
+waveform = "mlpe.injection.bilby_frequency_domain_sine_gaussian"
 datadir = "${base.datadir}"
 logdir = "${base.logdir}"
 accounting_group = "${LIGO_ACCOUNTING_GROUP}"
