Use ml4gw sine gaussian (#90)
* finalize torch sg

* merge in sequential scheudler

* add model memory and n params info

* fix validation dataset generation problem with bilby

* get tests working

* fix pre-commit

* create utils file

* fix data tests

* updates

* rebase with seq scheduler

* update

* change run script to sequentail

* add clarifying comment

* change to log 10

* change freq domain naming

* add ml4gw commit

--- a/projects/sandbox/sampling/pyproject.toml
+++ b/projects/sandbox/sampling/pyproject.toml
@@ -19,6 +19,7 @@ torch = {version = "^1.12", source = "torch"}
 typeo = {path = "../../../typeo", develop = true}
 
 ligo-skymap = "^1.0.7"
+ipykernel = "^6.23.1"
 
 [[tool.poetry.source]]
 name = "torch"
