--- a/projects/sandbox/data_generation/pyproject.toml
+++ b/projects/sandbox/data_generation/pyproject.toml
@@ -22,6 +22,7 @@ typeo = {git = "https://github.com/ML4GW/typeo.git"}
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2.0"
+ipykernel = "^6.23.1"
 
 [tool.poetry.scripts]
 generate-background = "data_generation.background:main"
