--- a/projects/sandbox/pyproject.toml
+++ b/projects/sandbox/pyproject.toml
@@ -2,14 +2,14 @@
 # note: until pinto update gets in, any steps
 # that have subcommands will fail (e.g. training and sampling)
 steps = [
-    "data_generation:generate-background",
-    "data_generation:generate-waveforms",
-    "data_generation:generate-flow-injections",
-    "data_generation:generate-bilby-injections",
-    "analyze_with_bilby:analyze-with-bilby",
-    "train:train:maf:resnet",
+    #"data_generation:generate-background",
+    #"data_generation:generate-waveforms",
+    #"data_generation:generate-flow-injections",
+    #"data_generation:generate-bilby-injections",
+    #"analyze_with_bilby:analyze-with-bilby",
+    #"train:train:maf:resnet",
     "sampling:sample-with-flow:maf:resnet",
-    "sampling:sample-and-compare-with-bilby:maf:resnet"
+    #"sampling:sample-and-compare-with-bilby:maf:resnet"
 ]
 
 [tool.typeo.base]
@@ -40,16 +40,16 @@ bilby_duration = 4
 # training parameters
 batches_per_epoch = 300
 max_epochs = 250
-init_weights = "/work/submit/deep1018/pe-base-dir/training/weights.pt"
+#init_weights = "/work/submit/deep1018/pe-base-dir/training/weights.pt"
 
 # flow subcommands
-coupling = {num_flow_steps = 10}
+coupling = {num_transforms = 20, num_transform_blocks = 4, use_batch_norm = true}
 maf = {num_transforms = 15, num_blocks = 2, use_batch_norm = true}
 
 # embedding subcommands
 dense = {context_dim = 64, hidden_layer_size = 128, num_hidden_layers = 2}
 coherent = {context_dim = 64, hidden_layer_size = 128, num_hidden_layers = 2}
-resnet = {context_dim = 128, layers = [2, 2], norm_groups = 8}
+resnet = {context_dim = 128, layers = [2,  2], norm_groups = 8}
 
 [tool.typeo.scripts.generate-background]
 datadir = "${base.datadir}"
@@ -57,7 +57,7 @@ logdir = "${base.logdir}"
 channel = "${base.channel}"
 frame_type = "${base.frame_type}"
 state_flag = "${base.state_flag}"
-start = "${base.start}" 
+start = "${base.start}"
 stop = "${base.stop}" 
 ifos = "${base.ifos}"
 sample_rate = "${base.sample_rate}" 
@@ -69,27 +69,28 @@ gaussian = true
 [tool.typeo.scripts.generate-waveforms]
 datadir = "${base.datadir}"
 logdir = "${base.logdir}"
-n_samples = 100000
+n_samples = 25000
 sample_rate = "${base.sample_rate}" 
 force_generation = "${base.force_generation}"
-waveform = "mlpe.injection.waveforms.sine_gaussian_frequency"
 waveform_duration = "${base.waveform_duration}"
 prior = "${base.prior}"
 
 [tool.typeo.scripts.train]
-waveform_dataset = "${base.datadir}/signals.h5"
 background_path = "${base.datadir}/background.h5" 
+waveform_dataset = "${base.datadir}/validation_signals.h5"
+
 logdir = "${base.logdir}"
 outdir = "${base.basedir}/training"
+
 inference_params = "${base.inference_params}"
 
 ifos = "${base.ifos}"
-kernel_length = "${base.kernel_length}"
 sample_rate = "${base.sample_rate}"
+kernel_length = "${base.kernel_length}"
 fduration = "${base.fduration}"
 highpass = 32 
-trigger_distance = "${base.trigger_distance}"
-batch_size = 512
+
+batch_size = 1024
 batches_per_epoch = "${base.batches_per_epoch}"
 max_epochs = "${base.max_epochs}"
 early_stop = 30
@@ -100,7 +101,7 @@ device = "cuda"
 
 valid_frac = 0.25
 valid_stride = 0.0625
-
+#init_weights = "${base.basedir}/training/weights.pt"
 # flow subcommand
 [tool.typeo.scripts.train.flow]
 coupling = "${base.coupling}"
@@ -114,14 +115,15 @@ resnet = "${base.resnet}"
 
 # scheduler subcommand
 [tool.typeo.scripts.train.optimizer]
-adam = {lr = 1e-3, weight_decay = 1e-5}
+adam = {lr = 1e-4, weight_decay = 1e-5}
 
 # optimizer subcommand
 [tool.typeo.scripts.train.scheduler]
 onecycle = {max_lr = 1e-3, epochs = "${base.max_epochs}", lr_ramp_epochs = 80, steps_per_epoch = "${base.batches_per_epoch}" }
 cosine = {T_max = 10000, eta_min = 1e-5}
 sequential = {schedulers = ['ConstantLR', 'CosineAnnealingLR', 'StepLR'], scheduler_kwargs = ["dict(total_iters=4800)", "dict(T_max=2000,eta_min=1e-5)", "dict(gamma=0.1,step_size=2400)"], milestones = [4800, 20000]}
-
+plateau = {factor = 0.9, patience = 30, cooldown = 10, min_lr = 1e-8}
+step = {step_size = 4500, gamma = 0.6}
 
 [tool.typeo.scripts.generate-flow-injections]
 ifos = "${base.ifos}"
@@ -132,8 +134,7 @@ start = "${base.stop}"
 stop = "${base.test_stop}" 
 sample_rate = "${base.sample_rate}"
 prior = "${base.prior}"
-waveform = "mlpe.injection.waveforms.sine_gaussian_frequency"
-n_samples = 5000
+n_samples = 1000
 kernel_length = "${base.kernel_length}"
 waveform_duration = "${base.waveform_duration}"
 datadir = "${base.datadir}"
@@ -151,8 +152,7 @@ start = "${base.stop}"
 stop = "${base.test_stop}"
 sample_rate = "${base.sample_rate}"
 prior = "mlpe.injection.priors.sg_uniform"
-waveform = "mlpe.injection.waveforms.sine_gaussian_frequency"
-n_samples = 1
+n_samples = 10
 waveform_duration = "${base.waveform_duration}"
 spacing = 100
 buffer = 10
@@ -166,7 +166,7 @@ n_live = 256
 n_act = 5
 ifos = "${base.ifos}"
 bilby_duration = "${base.bilby_duration}"
-waveform = "mlpe.injection.waveforms.sine_gaussian_frequency"
+waveform = "mlpe.injection.bilby_frequency_domain_sine_gaussian"
 datadir = "${base.datadir}"
 logdir = "${base.logdir}"
 accounting_group = "${LIGO_ACCOUNTING_GROUP}"
@@ -209,7 +209,7 @@ model_state_path = "${base.basedir}/training/weights.pt"
 inference_params = "${base.inference_params}"
 basedir = "${base.basedir}"
 testing_set = "${base.datadir}/bilby/bilby_injections.hdf5"
-bilby_result_dir = "${base.datadir}/bilby/rundir/final_result"
+bilby_result_dir = "${base.datadir}/bilby/rundir-more-live/final_result"
 num_samples_draw = 10000
 device = "cuda"
 
