--- a/projects/sandbox/pyproject.toml
+++ b/projects/sandbox/pyproject.toml
@@ -7,8 +7,8 @@ steps = [
     #"data_generation:generate-flow-injections",
     #"data_generation:generate-bilby-injections",
     #"analyze_with_bilby:analyze-with-bilby",
-    #"train:train:maf:resnet",
-    "sampling:sample-with-flow:maf:resnet",
+    "train:train:maf:resnet",
+    #"sampling:sample-with-flow:maf:resnet",
     #"sampling:sample-and-compare-with-bilby:maf:resnet"
 ]
 
@@ -49,7 +49,7 @@ maf = {num_transforms = 15, num_blocks = 2, use_batch_norm = true}
 # embedding subcommands
 dense = {context_dim = 64, hidden_layer_size = 128, num_hidden_layers = 2}
 coherent = {context_dim = 64, hidden_layer_size = 128, num_hidden_layers = 2}
-resnet = {context_dim = 128, layers = [2,  2], norm_groups = 8}
+resnet = {context_dim = 128, layers = [2, 2], norm_groups = 8}
 
 [tool.typeo.scripts.generate-background]
 datadir = "${base.datadir}"
@@ -228,7 +228,7 @@ resnet = "${base.resnet}"
 [tool.typeo.scripts.deploy-bilby]
 start = "${base.stop}"
 stop = "${base.test_stop}"
-n_samples = 100
+n_samples = 50
 duration = 2
 sample_rate = "${base.sample_rate}"
 fmin = "${base.highpass}"
