add mldatafind as submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "typeo"]
 	path = typeo
 	url = git@github.com:ML4GW/typeo.git
+[submodule "mldatafind"]
+	path = mldatafind
+	url = git@github.com:ML4GW/mldatafind.git
