--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,5 @@
 	url = https://github.com/ML4GW/hermes
 [submodule "ml4gw"]
 	path = ml4gw
-	url = https://github.com/ML4GW/ml4gw
+	url = https://github.com/deepchatterjeeligo/ml4gw.git
+	branch = sampler-to-bilby-prior
