--- a/projects/train/configs/flow/cbc.yaml
+++ b/projects/train/configs/flow/cbc.yaml
@@ -17,8 +17,9 @@ model:
   class_path: train.models.flow.FlowModel
   init_args:
     outdir: "/home/ethan.marx/amplfi/runs/first-lightning-run/"
+    inference_params: ${data.inference_params}
     arch:
-      class_path: train.architectures.flows.MaskedAutoRegressiveFlow
+      class_path: train.architectures.flows.InverseAutoregressiveFlow
       init_args:
         hidden_features: 150
         num_transforms: 80
