--- a/projects/train/configs/similarity/cbc.yaml
+++ b/projects/train/configs/similarity/cbc.yaml
@@ -9,17 +9,17 @@ trainer:
     - class_path: lightning.pytorch.loggers.WandbLogger
       init_args:
         save_dir: "/home/ethan.marx/amplfi/runs/first-similarity-run/"
-  max_epochs: 200
+  max_epochs: 50
   check_val_every_n_epoch: 1
   log_every_n_steps: 20
   benchmark: false
 model:
   class_path: train.models.SimilarityModel
   init_args:
-    outdir: "/home/ethan.marx/amplfi/runs/first-similarity-run/"
-    embedding:
+    arch:
       class_path: train.architectures.embeddings.ResNet
       init_args:
+        context_dim: 8
         layers: [5, 3, 3]
         norm_layer:
           class_path: ml4gw.nn.norm.GroupNorm1DGetter
@@ -41,16 +41,16 @@ data:
     psd_length: 12
     fftlength: 2
     batches_per_epoch: 200
-    batch_size: 512
+    batch_size: 256
     ifos: ["H1", "L1"]
     min_valid_duration: 10000.0
     augmentor: 
       class_path: train.data.augmentors.TimeTranslator
       init_args:
-        jitter: 0.2
+        jitter: 0.5
         sample_rate: 2048
     waveform_sampler: 
-      class_path: train.data.waveforms.generator.cbc.CBCGenerator
+      class_path: train.data.waveforms.generator.cbc.FrequencyDomainCBCGenerator
       init_args:
         num_fit_params: 100000
         parameter_sampler: train.priors.cbc_prior
