--- a/projects/train/pyproject.toml
+++ b/projects/train/pyproject.toml
@@ -17,6 +17,9 @@ pyro-ppl = "^1.9.0"
 jsonargparse = {version = "^4.17", extras = ["signatures"]}
 wandb = "^0.16.3"
 
+"amplfi.architectures" = {path = "../../amplfi/architectures", develop = true}
+omegaconf = "^2.3.0"
+
 [tool.poetry.group.dev.dependencies]
 jupyter = "^1.0.0"
 pytest = "^8.0.2"
