--- a/projects/train/configs/flow/cbc.yaml
+++ b/projects/train/configs/flow/cbc.yaml
@@ -7,6 +7,9 @@ trainer:
   profiler: "simple"
   logger:
     - class_path: lightning.pytorch.loggers.WandbLogger
+      init_args:
+        save_dir: ${oc.env:AMPLFI_OUTDIR}/train_logs
+
   max_epochs: 200
   check_val_every_n_epoch: 1
   log_every_n_steps: 20
@@ -14,6 +17,7 @@ trainer:
 model:
   class_path: train.models.flow.FlowModel
   init_args:
+    outdir: ${oc.env:AMPLFI_OUTDIR}
     arch:
       class_path: amplfi.architectures.flows.InverseAutoregressiveFlow
       init_args:
@@ -40,7 +44,7 @@ model:
 data:
   class_path: train.data.datasets.FlowDataset
   init_args:
-    data_dir: "/home/ethan.marx/amplfi/data/"
+    data_dir: ${oc.env:AMPLFI_DATADIR}
     inference_params: ["chirp_mass", "mass_ratio", "distance", "phic",  "inclination", "dec", "psi", "phi"]
     highpass: 25
     sample_rate: 2048
@@ -48,7 +52,7 @@ data:
     fduration: 1
     psd_length: 10
     fftlength: 2
-    batches_per_epoch: 200
+    batches_per_epoch: 2
     batch_size: 512
     ifos: ["H1", "L1"]
     min_valid_duration: 10000.0
