--- a/amplfi/law/config.cfg
+++ b/amplfi/law/config.cfg
@@ -1,4 +1,43 @@
+[luigi_core]
+local_scheduler = true
+log_level = INFO
+
+[luigi_base]
+ifos = ["H1", "L1"]
+
+# data generation parameters
+train_start = 1240579783
+train_stop = 1241443783
+test_stop = 1244035783 
+max_duration = 20000
+flag = DATA 
+channels =  &::ifos
+sample_rate = 2048
+
 [luigi_FetchTrain]
+workflow = htcondor
+start = &::luigi_base::train_start
+end = &::luigi_base::train_stop
+sample_rate = &::luigi_base::sample_rate
+min_duration = 1024
+max_duration = &::luigi_base::max_duration
+flag = &::luigi_base::flag
+ifos = &::luigi_base::ifos
+channels = &::luigi_base::channels
+request_memory = 6GB
+request_disk = 1024KB
+request_cpus = 1
 
 
 [luigi_FetchTest]
+workflow = htcondor
+start = &::luigi_base::train_stop
+end = &::luigi_base::test_stop
+sample_rate = &::luigi_base::sample_rate
+min_duration = 128
+max_duration = &::luigi_base::max_duration
+flag = &::luigi_base::flag
+channels = &::luigi_base::channels
+request_memory = 6GB
+request_disk = 1024KB
+request_cpus = 1
