get pipeline running!

--- a/amplfi/law/pyproject.toml
+++ b/amplfi/law/pyproject.toml
@@ -9,7 +9,7 @@ packages = [{include = "amplfi"}]
 [tool.poetry.dependencies]
 python = ">=3.9,<3.12"
 law = {git = "https://github.com/riga/law.git", branch = "master"}
-mldatafind = {git = "https://github.com/ML4GW/mldatafind.git", branch = "law-overhaul"}
+mldatafind = {path = "../../mldatafind/", develop = true} 
 luigi = "^3.5.1"
 
 
