--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "ml4gw"]
 	path = ml4gw
 	url = https://github.com/ML4GW/ml4gw
+[submodule "mldatafind"]
+	path = mldatafind
+	url = git@github.com:ML4GW/mldatafind.git
