--- a/amplfi/law/config.cfg
+++ b/amplfi/law/config.cfg
@@ -36,8 +36,15 @@ end = &::luigi_base::test_stop
 sample_rate = &::luigi_base::sample_rate
 min_duration = 128
 max_duration = &::luigi_base::max_duration
+ifos = &::luigi_base::ifos
 flag = &::luigi_base::flag
 channels = &::luigi_base::channels
 request_memory = 6GB
 request_disk = 1024KB
 request_cpus = 1
+
+[logging]
+law.sandbox.base: DEBUG 
+law: INFO
+luigi: INFO
+law.workflow.base: DEBUG
