--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,6 @@ exclude = '''
 '''
 
 [tool.isort]
-known_first_party = ["mlpe"]
+known_first_party = ["amplfi", "train", "data"]
 multi_line_output = 3
 include_trailing_comma = true
