--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,6 +4,8 @@ repos:
   hooks:
   - id: isort
     name: isort (python)
+    args:
+    - "--verbose"
 - repo: https://github.com/psf/black
   rev: 22.3.0
   hooks:
