--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,5 +13,6 @@ exclude = '''
 
 [tool.isort]
 known_first_party = ["amplfi", "train", "data"]
+known_third_party = ["ml4gw"]
 multi_line_output = 3
 include_trailing_comma = true
