update similarity config with outdir

--- a/projects/train/configs/similarity/cbc.yaml
+++ b/projects/train/configs/similarity/cbc.yaml
@@ -16,6 +16,7 @@ trainer:
 model:
   class_path: train.models.SimilarityModel
   init_args:
+    outdir: ${oc.env:AMPLFI_OUTDIR}
     arch:
       class_path: amplfi.architectures.embeddings.ResNet
       init_args:
@@ -33,7 +34,6 @@ data:
   class_path: train.data.datasets.SimilarityDataset
   init_args:
     data_dir: ${oc.env:AMPLFI_DATADIR}
-    inference_params: ["chirp_mass", "mass_ratio", "distance", "phic",  "inclination", "dec", "psi", "phi"]
     highpass: 25
     sample_rate: 2048
     kernel_length: 5
