Update similarity config with `outdir` (#107)
* update similarity config with outdir

* add back inference params

--- a/projects/train/configs/similarity/cbc.yaml
+++ b/projects/train/configs/similarity/cbc.yaml
@@ -16,6 +16,7 @@ trainer:
 model:
   class_path: train.models.SimilarityModel
   init_args:
+    outdir: ${oc.env:AMPLFI_OUTDIR}
     arch:
       class_path: amplfi.architectures.embeddings.ResNet
       init_args:
