--- a/projects/train/configs/similarity/cbc.yaml
+++ b/projects/train/configs/similarity/cbc.yaml
@@ -9,6 +9,9 @@ trainer:
     - class_path: lightning.pytorch.loggers.WandbLogger
       init_args:
         save_dir: ${oc.env:AMPLFI_OUTDIR}/train
+        project: amplfi
+        # uncomment and set to name your run
+        # name: 
   max_epochs: 50
   check_val_every_n_epoch: 1
   log_every_n_steps: 20
