--- a/amplfi/architectures/pyproject.toml
+++ b/amplfi/architectures/pyproject.toml
@@ -2,14 +2,17 @@
 name = "amplfi.architectures"
 version = "0.1.0"
 description = "Architectures for amplfi"
-authors = ["Ethan Jacob Marx <ethan.marx@ligo.org>"]
+authors = ["Ethan Jacob Marx <ethan.marx@ligo.org>", "Deep Chatterjee <deep.chatterjee@ligo.org>"]
 packages = [{include = "amplfi"}]
 
 
 [tool.poetry.dependencies]
 python = ">=3.9,<3.12"
-pyro-ppl = "^1.9.0"
+ml4gw = {path = "../../ml4gw", develop = true}
+pyro-ppl = "^1.9"
 
+[tool.poetry.group.test.dependencies]
+pytest = "^8.3"
 
 [build-system]
 requires = ["poetry-core"]
