--- a/.github/workflows/unit-tests.yaml
+++ b/.github/workflows/unit-tests.yaml
@@ -26,6 +26,7 @@ jobs:
   tests:
     runs-on: ubuntu-latest
     needs: changes
+    if: ${{ needs.changes.outputs.libraries != '[]' }}  # runs only when there are changes
     strategy:
       fail-fast: true # is this desired behavior here?
       matrix:
@@ -44,8 +45,7 @@ jobs:
         with:
           submodules: recursive
 
-      -
-        name: build and run tests
+      - name: build and run tests
         env:
           test_dir: /github/workspace/${{ matrix.library }}
         run: |
