--- a/amplfi/law/pyproject.toml
+++ b/amplfi/law/pyproject.toml
@@ -13,6 +13,9 @@ mldatafind = {path = "../../mldatafind/", develop = true}
 luigi = "^3.5.1"
 
 
+[tool.poetry.group.dev.dependencies]
+jupyter = "^1.0.0"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
