--- a/projects/train/configs/similarity/cbc.yaml
+++ b/projects/train/configs/similarity/cbc.yaml
@@ -20,6 +20,7 @@ model:
   class_path: train.models.SimilarityModel
   init_args:
     outdir: ${oc.env:AMPLFI_OUTDIR}
+    checkpoint: null
     arch:
       class_path: amplfi.architectures.embeddings.ResNet
       init_args:
