--- a/projects/train/configs/flow/cbc.yaml
+++ b/projects/train/configs/flow/cbc.yaml
@@ -20,6 +20,8 @@ model:
   class_path: train.models.flow.FlowModel
   init_args:
     outdir: ${oc.env:AMPLFI_OUTDIR}
+    # uncomment below when running `trainer.test` to load in a checkpoint
+    checkpoint: null
     arch:
       class_path: amplfi.architectures.flows.InverseAutoregressiveFlow
       init_args:
